--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       .poster img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: fill;
       }
 
       .poster-info {
