--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         padding: 1rem;
       }
 
-      
       .poster {
         width: 300px;
         height: 450px;
@@ -71,6 +70,30 @@
         line-height: 1.4;
       }
 
+      .apply-btn {
+        padding: 12px 24px;
+        background: #4285f4;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+        transition: background 0.3s ease;
+        display: block;
+        width: fit-content;
+        /* margin: 1rem auto; */
+      }
+
+      .apply-btn:hover {
+        background: #357abd;
+      }
+
+      .poster-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+      }
+
       @media (max-width: 768px) {
         body {
           flex-direction: column;
@@ -100,19 +123,22 @@
     </style>
   </head>
   <body>
-    <div class="poster">
-      <img src="images/sportsposter.JPG" alt="Poster 1" />
-      <div class="poster-info">
-        <h2 class="poster-title">Sports 4 Change</h2>
-        <!-- <p class="poster-description">An epic adventure through space and time, where humanity's greatest journey begins.</p> -->
+    <div class="poster-container">
+      <div class="poster">
+        <img src="images/sportsposter.JPG" alt="Poster 1" />
+        <div class="poster-info">
+          <h2 class="poster-title">Sports 4 Change</h2>
+          <!-- <p class="poster-description">An epic adventure through space and time, where humanity's greatest journey begins.</p> -->
+        </div>
       </div>
-    </div>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd_PikpJ7cxrtqGz1n7w8MkTQsRHh-T2VWHUcWBLhc5YFjbEA/viewform?usp=preview" target="_blank" class="apply-btn">Apply for a Ramadan Food Package</a>
 
-    <div class="poster">
-      <img src="images/ramadanposter.JPG" alt="Poster 2" />
-      <div class="poster-info">
-        <h2 class="poster-title">Ramadan Packages</h2>
-        <!-- <p class="poster-description">In the heart of the city, where dreams come alive and stories unfold.</p> -->
+      <div class="poster">
+        <img src="images/ramadanposter.JPG" alt="Poster 2" />
+        <div class="poster-info">
+          <h2 class="poster-title">Ramadan Packages</h2>
+          <!-- <p class="poster-description">In the heart of the city, where dreams come alive and stories unfold.</p> -->
+        </div>
       </div>
     </div>
 
