--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
         <img src="images/sportsposter.JPG" alt="Poster 1" />
         <div class="poster-info">
           <h2 class="poster-title">Sports 4 Change</h2>
-          <!-- <p class="poster-description">An epic adventure through space and time, where humanity's greatest journey begins.</p> -->
         </div>
       </div>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSd_PikpJ7cxrtqGz1n7w8MkTQsRHh-T2VWHUcWBLhc5YFjbEA/viewform?usp=preview" target="_blank" class="apply-btn">Apply for a Ramadan Food Package</a>
@@ -137,20 +136,22 @@
         <img src="images/ramadanposter.JPG" alt="Poster 2" />
         <div class="poster-info">
           <h2 class="poster-title">Ramadan Packages</h2>
-          <!-- <p class="poster-description">In the heart of the city, where dreams come alive and stories unfold.</p> -->
+        </div>
+      </div>
+
+      <div class="poster">
+        <img src="images/iftar.JPG" alt="Poster 3" />
+        <div class="poster-info">
+          <h2 class="poster-title">Iftar</h2>
+        </div>
+      </div>
+
+      <div class="poster">
+        <img src="images/Ramadan.jpg" alt="Poster 4" />
+        <div class="poster-info">
+          <h2 class="poster-title">Ramadan</h2>
         </div>
       </div>
     </div>
-
-    <!-- <script>
-      document.querySelectorAll(".poster").forEach((poster) => {
-        poster.addEventListener("click", () => {
-          poster.style.transform = "scale(1.05)";
-          setTimeout(() => {
-            poster.style.transform = "";
-          }, 200);
-        });
-      });
-    </script> -->
   </body>
 </html>
