--- a/projects.html
+++ b/projects.html
@@ -203,6 +203,11 @@
     <section class="projects-section">
       <h2>Current Projects</h2>
       <div class="projects-container">
+                <div class="project-card">
+          <img src="images/aiworkshop.jpg" alt="AI Workshop" />
+          <h3>AI Workshop</h3>
+          <p>We hosted a free seminar to show how everyday people and small business owners can use AI to save time and unlock new income opportunities.</p>
+        </div>
         <div class="project-card">
           <img src="images/eidmela.jpg" alt="Eid Mela" />
           <h3>Eid Mela</h3>
