--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - Kent Muslim Hands</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <style>
       * {
         margin: 0;
@@ -114,6 +115,17 @@
         text-align: center;
         padding: 2rem;
         margin-top: 2rem;
+      }
+      footer .social-icons {
+        margin-top: 1rem;
+      }
+
+      footer .social-icons a {
+        color: white;
+        font-size: 1.5rem;
+        margin: 0 10px;
+        display: inline-block;
+        transition: color 0.3s ease;
       }
 
       /* Responsive Styles */
@@ -330,8 +342,19 @@
       <a href="mailto:info@kentmuslimhands.org.uk?subject=Get Involved Request&body=Dear Kent Muslim Hands," class="email-button">Get Involved</a>
     </section>
 
+    <!-- <footer>
+      <p>&copy; 2025 Kent Muslim Hands. All rights reserved.</p>
+    </footer> -->
     <footer>
       <p>&copy; 2025 Kent Muslim Hands. All rights reserved.</p>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/people/Kent-Muslim-Hands/61574656376323/" target="_blank" aria-label="Kent Muslim Hands Facebook">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://www.tiktok.com/@kent.muslim.hands" target="_blank" aria-label="Kent Muslim Hands TikTok">
+          <i class="fab fa-tiktok"></i>
+        </a>
+      </div>
     </footer>
   </body>
 </html>
