--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <section class="section" style="background-color: #e9fbe5">
       <h2>Our Projects</h2>
       <div class="content">
-        <img src="images/eidmela.jpg" alt="Community Projects" />
+         <img src="images/selfdefenceclass.JPG" alt="Community Projects" />
         <div class="content-text">
           <p>From food distribution to community education, our projects are focused on uplifting the vulnerable and bridging cultural gaps.</p>
           <a href="projects.html" class="read-more-btn">Read More</a>
