--- a/projects.html
+++ b/projects.html
@@ -224,6 +224,11 @@
     <section class="projects-section">
       <h2>Current Projects</h2>
       <div class="projects-container">
+                <div class="project-card">
+          <img src="images/swimming.JPG" alt="Ladies Only Swimming Lessons" />
+          <h3>Ladies Only Swimming Lessons</h3>
+          <p>Join us for swimming lessons designed exclusively for Muslim women in a comfortable and supportive environment.</p>
+        </div>
         <div class="project-card">
           <img src="images/selfdefenceclass.JPG" alt="Self Defence Class" />
           <h3>Self Defence Class</h3>
